# controllers/clients.js
@@ -1,37 +1,46 @@
-const mongodb = require('../db/connect');
+//const mongodb = require('../db/connect');
 const ObjectId = require('mongodb').ObjectId;
+const Client = require('../models/clients-model');
 
 const getAllClient = async (req, res) => {
-  const result = await mongodb.getDb().db().collection('clients').find();
-  result.toArray().then((lists) => {
-    res.setHeader('Content-Type', 'application/json');
-    res.status(200).json(lists);
-  });
+  try {
+		const result = await Client.find();
+		res.setHeader('Content-Type', 'application/json');
+		res.status(200).json(result);
+	} catch (err) {
+		res.status(500).json(err.message);
+		res.status(401);
+	}
 };
 
 const getSingleClient = async (req, res) => {
-  const clientId = new ObjectId(req.params.id);
-  const result = await mongodb.getDb().db().collection('clients').find({ _id: clientId });
-  result.toArray().then((lists) => {
-    res.setHeader('Content-Type', 'application/json');
-    res.status(200).json(lists[0]);
-  });
+  const email_address = req.params.email_address;
+  Client.findOne({ email_address: email_address })
+    .then((data) => {
+      res.send(data);
+    })
+    .catch((err) => {
+      res.status(500).send({
+        message: err.message || 'Some error occurred while retrieving users.'
+      });
+    });
 };
 
 const createClient = async (req, res) => {
-  const client = {
+  const client = new Client({
+    email_address: req.body.email_address,
+    password: req.body.password,
     first_name: req.body.first_name,
     last_name: req.body.last_name,
-    email_address: req.body.email_address,
     phoneNumber: req.body.phoneNumber,
     street_address: req.body.street_address,
     city: req.body.city
-  };
-  const response = await mongodb.getDb().db().collection('clients').insertOne(client);
-  if (response.acknowledged) {
-    res.status(201).json(response);
-  } else {
-    res.status(500).json(response.error || 'Some error occurred while creating the client.');
+  });
+  try {
+    const savedClient = await client.save();
+    res.json({ error: null, data: savedClient._id });
+  } catch (error) {
+    res.status(400).json(error.message);
   }
 };
 
@@ -39,17 +48,15 @@ const updateClient = async (req, res) => {
   const clientId = new ObjectId(req.params.id);
   // be aware of updateOne if you only want to update specific fields
   const client = {
+    email_address: req.body.email_address,
+    password: req.body.password,
     first_name: req.body.first_name,
     last_name: req.body.last_name,
-    email_address: req.body.email_address,
     phoneNumber: req.body.phoneNumber,
     street_address: req.body.street_address,
     city: req.body.city
   };
-  const response = await mongodb
-    .getDb()
-    .db()
-    .collection('clients')
+  const response = await Client
     .replaceOne({ _id: clientId }, client);
   console.log(response);
   if (response.modifiedCount > 0) {
@@ -60,14 +67,9 @@ const updateClient = async (req, res) => {
 };
 
 const deleteClient = async (req, res) => {
-  const clientId = new ObjectId(req.params.id);
-  const response = await mongodb.getDb().db().collection('clients').remove({ _id: clientId }, true);
-  console.log(response);
-  if (response.deletedCount > 0) {
-    res.status(204).send();
-  } else {
-    res.status(500).json(response.error || 'Some error occurred while deleting the client.');
-  }
+  await Client.deleteOne({ "email_address": req.body.email_address}).then(() => {
+    res.status(200).send({ message: 'Client deleted'})
+  })
 };
 
 module.exports = {
